--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html, body {
     height: 100%;
-    margin: 0;
+    margin: 0;    
 }
 
 .whole-block {
@@ -8,7 +8,8 @@ html, body {
     flex-direction: column;    
     text-align: center;
     height: 100%;
-    min-height: 100%;    
+    min-height: 100%;   
+    font-family: 'Courier New', monospace;      
 }
 
 .hour-block {
@@ -16,8 +17,7 @@ html, body {
     flex: 1;
     justify-content: space-evenly;
     align-items: center;
-    color: rgba(0, 0, 0, .6);
-    font-family: 'Courier New', monospace;    
+    color: rgba(0, 0, 0, .75);     
 }  
 
 .cycle-time {
@@ -26,7 +26,7 @@ html, body {
 }
 
 .cycle-info {
-    color: rgba(0, 0, 0, 0.5);
+    color: rgba(0, 0, 0, 0.6);
 }
 
 .hour-block-1 {
@@ -53,8 +53,22 @@ html, body {
     background-color: #153f47;
 }
 
-#time-button {
-    color: red;
+#timeButton {
+    background-color: #0f0f0f;
+    color: white;
+    border: none;
+    height: 4em;
+    font-weight: bold;
+    font-family: inherit;
+    transition-duration: 150ms;
 }
 
+#timeButton:hover {
+    background-color: white;
+    color: #0f0f0f;
+}
+
+#timeButton:active {
+    background-color: #a7a7a7;
+}
 
