--- a/style.css
+++ b/style.css
@@ -9,21 +9,21 @@ html, body {
     text-align: center;
     height: 100%;
     min-height: 100%;   
-    font-family: 'Courier New', monospace;      
+    font-family: 'Bebas Neue', cursive;
 }
 
 .hour-block {
     display: flex;
     flex: 1;
-    justify-content: space-evenly;
+    justify-content: space-around;
     align-items: center;
     color: rgba(0, 0, 0, .75);    
 }  
 
 .cycle-time {
-    font-weight: bolder;
-    font-size: 1.5em;
-    padding: 0em .5em;    
+    position: absolute;    
+    font-size: 5em;
+    padding: 0em .5em;
 }
 
 .cycle-info {
